--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,7 +46,7 @@ jobs:
           repository: TomasDiez99/friendly-carnival
           ref: main
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r /path/to/requirements.txt
       - run: |
           python main.py
       - uses: actions/upload-artifact@v2
