--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           repository: jmoyano/ubiquitous-bassoon
           ref: main
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - name: Install dependencies
         run: pip install -r requirements.txt
       - run: |
