--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           repository: TomasDiez99/friendly-carnival
           ref: main
+      - run: |
+          pip freeze > requirements.txt
       - name: Install dependencies
         run: pip install -r requirements.txt
       - run: |
