--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,8 +33,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: |
-          python -m unittest --verbose --failfast
+      - run: python -m unittest --verbose --failfast
   build:
     name: "Upload main script"
     runs-on: ubuntu-latest
