--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,9 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          repository: TomasDiez99/friendly-carnival
-          ref: main
       - run: |
           pip install flake8 pylint
       - run: |
@@ -29,10 +26,7 @@ jobs:
         with:
           repository: jmoyano/ubiquitous-bassoon
           ref: main
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
+      - uses: actions/checkout@v3
       - run: python -m unittest --verbose --failfast
   build:
     name: "Upload main script"
