--- a/.github/workflows/ideal-barnacle-test.yml
+++ b/.github/workflows/ideal-barnacle-test.yml
@@ -1,4 +1,4 @@
-name: Ideal Barnacle Test
+name: Ideal Barnacle Custom Actions Test
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    name: "Test job"
+    name: "Custom action Test"
     runs-on: ubuntu-latest
     steps:
       - uses: TomasDiez99/ideal-barnacle@main
