--- a/.github/workflows/ideal-barnacle-test.yml
+++ b/.github/workflows/ideal-barnacle-test.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: TomasDiez99/ideal-barnacle@main
-      - run: echo "Fin workflow"
+      - run: echo "Fin workflow!"
